--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
 .DS_Store
 node_modules
-.env
+dist
+data
+
+# local env files
+.local.env
+.*.env
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
