--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '3'
 services:
+    client:
+        build: ./client
+        tty: true
+        working_dir: /usr/src/app
+        volumes: 
+            - ./client:/usr/src/app
+        ports: 
+            - 80:8080
+        container_name: vue-client
     server:
         build: ./server
         tty: true
@@ -7,5 +16,5 @@ services:
         volumes: 
             - ./server:/usr/src/app
         ports: 
-            - "3000:3000"
+            - 3000:3000
         container_name: express-server
