--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,17 +24,23 @@ services:
         ports: 
             - 3000:3000
         container_name: express-server
-    db:
+    db_mysql:
         image: mysql:latest
         restart: always
         tty: true
         networks: 
             optimus_net:
                 ipv4_address: 172.19.0.30
+        command: --default-authentication-plugin=mysql_native_password
         env_file: 
             - .env
+        expose: 
+            - 3307
+        ports: 
+            - 3307:3307
         volumes:
             - ./mysql/data:/var/lib/mysql
+            - ./mysql/init:/docker-entrypoint-initdb.d
         container_name: mysql_db
         
         
