--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "socket.io-client": "^2.3.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
